# INF-446-2025-1

./: .gitignore  README.md  Readme.txt
EMO-D/MOEAD/: .gitignore  ALG_EMO_MAIN.cpp  ALG_EMO_MOEAD.cpp  ALG_EMO_MOEAD.h  ALG_EMO_MOEAD_DE.cpp  ALG_EMO_MOEAD_DE.h  CMakeLists.txt  DRP_ProblemInstance.cpp  DRP_ProblemInstance.h  GlobalVariable.h  IndividualBase.cpp  IndividualBase.h  MOEAD  Makefile  Node.cpp  Node.h  Node_DRP.h  ProblemInstance.cpp  ProblemInstance.h  README  Reader.cpp  Reader.h  Reader_DRP.cpp  Reader_DRP.h  SubProblemBase.cpp  TestInstance.cpp  TestInstance.h  Timeslot.cpp  Timeslot.h  Truck.cpp  Truck.h  UtilityToolBox.cpp  UtilityToolBox.h  analizar_delitos.py  app.py  crear_test_instancias.py  ejec  ejecuciones.txt  index.html  main.html  (+5 more)
EMO-D/MOEAD/INSTANCES/: escuela.dat.meta.json
EMO-D/MOEAD/SETTINGS/algorithms/: MOEAD-DE.txt  MOEAD.txt
EMO-D/MOEAD/SETTINGS/instances/: Instance.txt
EMO-D/MOEAD/SETTINGS/weightvectors/: calc_neighborhood.m  gen_weight.m
EMO-D/MOEAD/analisis_delitos/: estadisticas_por_anio.csv
ampl/: DRP.mod  DRP.run  DRP_v2.mod  (+24 more)
solver_moead/: CMakeLists.txt  MOEAD  Makefile  app.py  ejecuciones_v2.txt  execution_log.csv  run_all_instances_moead.sh
solver_moead/SETTINGS/algorithms/: MOEAD.txt
solver_moead/SETTINGS/weightvectors/: gen_weightRecursive.m
solver_moead/src/: ALG_EMO_MAIN.cpp  ALG_EMO_MOEAD.cpp  ALG_EMO_MOEAD.h  ALG_EMO_MOEAD_DE.h  DRP_ProblemInstance.cpp  GlobalObject.h  IndividualBase.cpp  IndividualBase.h  Node_DRP.cpp  Reader_DRP.cpp  TestInstance.h  UtilityToolBox.cpp  UtilityToolBox.h  ejecucion.cpp
(+17 files in other folders)
